# rechtsprechungs-crawler

./: .gitignore  LICENSE  README.md  pyproject.toml
common_crawl/: base_crawler.py  berlin_crawler.py  bw_crawler.py  hamburg_crawler.py  hessen_crawler.py  mv_crawler.py  rlp_crawler.py  saarland_crawler.py  sachsen_anhalt_crawler.py  sh_crawler.py  thueringen_crawler.py
custom_crawl/: bayern_crawler.py  brandenburg_crawler.py  bverfg_crawler.py  niedersachsen_crawler.py  nrw_crawler.py
