[project]
name = "legalcrawl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "requests>=2.32.5",
    "selenium>=4.0.0",
    "tenacity>=9.1.2",
    "webdriver-manager>=4.0.0",
]
